--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url("styles/variables.css");
 @import url("styles/latout.css");
+@import url("styles/main_section1.css");
 
 body {
   font-family: Arial, sans-serif;
