--- a/styles/latout.css
+++ b/styles/latout.css
@@ -2,14 +2,13 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
 /* Clases genéricas si deseas */
 .container {
-  max-width: 800px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 20px;
+  font-size: 16px;
 }
 
 .center-text {
