--- a/styles/main_section1.css
+++ b/styles/main_section1.css
@@ -104,3 +104,10 @@
   margin: 0 auto;
   color: var(--color-tarjeta);
 }
+
+.services__categoria {
+    width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+}
