--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url("styles/variables.css");
 @import url("styles/latout.css");
-@import url("styles/main_section1.css");
+@import url("styles/main_about.css");
 @import url("styles/main_services.css");
 
 body {
