--- a/styles/main_services.css
+++ b/styles/main_services.css
@@ -1,6 +1,48 @@
 .services {
+  display: flex ;
+  flex-direction: column;
+  width: 100%;
   padding: 80px 20px;
   text-align: center;
+}
+.section_servicios__container {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.section_servicios__container__cards {
+  display:flex;
+  flex: 1fr 1fr 1fr;
+  flex-direction:row;
+  width: 50%;
+  margin: 10px;
+  gap: 1rem;
+}
+.card__servicid1 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+}
+.imagen_servicio {
+  width: 20%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.card_content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9f9f9;
+  padding: 20px;
 }
 
 .services__title {
